syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "BookingProto";

service BookingService {
rpc MakeBooking (BookingRequest) returns (BookingResponse) {}
}

message BookingRequest {
string customer_name = 1;
string pickup_location = 2;
string dropoff_location = 3;
string pickup_date_time = 4;
}

message BookingResponse {
string booking_id = 1;
string confirmation = 2;
}