syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.payment";
option java_outer_classname = "PaymentProto";


service PaymentService {
rpc MakePayment (PaymentRequest) returns (PaymentResponse) {}
}
message PaymentRequest {
  string customer_name = 1;
  string credit_card_number = 2;
  string expiry_date = 3;
  double amount = 4;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}
